force-app/main/default/objects/Journey_Entry__e/Journey_Entry__e.object-meta.xml
<CustomObject>
    <label>Journey Entry</label>
    <pluralLabel>Journey Entries</pluralLabel>
    <description>Platform Event for triggering journey flows. Published by the Heroku Journey Builder when a journey is launched.</description>
</CustomObject>