force-app/main/default/objects/Journey_Entry__e/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <label>Campaign ID</label>
    <type>Text</type>
    <length>18</length>
    <description>Associated Salesforce Campaign ID</description>
</CustomField>