force-app/main/default/objects/Journey_Entry__e/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact ID</label>
    <type>Text</type>
    <length>18</length>
    <description>Salesforce Contact ID (when segment is Contact-based)</description>
</CustomField>