force-app/main/default/objects/Journey_Entry__e/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Text</type>
    <length>255</length>
    <description>Recipient email address</description>
</CustomField>