force-app/main/default/objects/Journey_Entry__e/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>First Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Recipient first name for personalization</description>
</CustomField>