force-app/main/default/objects/Journey_Entry__e/fields/JourneyId__c.field-meta.xml
<CustomField>
    <fullName>JourneyId__c</fullName>
    <label>Journey ID</label>
    <type>Text</type>
    <length>50</length>
    <description>Heroku Journey Builder journey UUID</description>
</CustomField>