force-app/main/default/objects/Journey_Entry__e/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Last Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Recipient last name for personalization</description>
</CustomField>