force-app/main/default/objects/Journey_Entry__e/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>Lead ID</label>
    <type>Text</type>
    <length>18</length>
    <description>Salesforce Lead ID (when segment is Lead-based)</description>
</CustomField>